--- a/test/fixtures/answers.yml
+++ b/test/fixtures/answers.yml
@@ -4,8 +4,7 @@
 # model remove the '{}' from the fixture names and add the columns immediately
 # below each fixture, per the syntax in the comments below
 #
-one: {}
-# column: value
-#
-two: {}
-# column: value
+one:
+  id: 1
+  question_id: 1
+  answer_text: 'Answer 1'
