--- a/test/fixtures/questions.yml
+++ b/test/fixtures/questions.yml
@@ -4,8 +4,8 @@
 # model remove the '{}' from the fixture names and add the columns immediately
 # below each fixture, per the syntax in the comments below
 #
-one: {}
-# column: value
-#
-two: {}
-# column: value
+one:
+  id: 1
+  survey_id: 1
+  question: Question 1
+  question_type: paragraph
